--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,24 +1,3 @@
-<div class="container1">
-    <table>
-        <tr class="table-row-heading">
-            <th>ID</th>
-            <th>Email</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-        <tr class="table-row" *ngFor="let user of users">
-            <td>
-                {{user.id}}
-            </td>
-            <td>
-                {{user.email}}
-            </td>
-            <td>
-                {{user.first_name}}
-            </td>
-            <td>
-                {{user.last_name}}
-            </td>
-        </tr>
-    </table>
+<div>
+    This is About Page!
 </div>
