--- a/src/app/directives/directives.component.css
+++ b/src/app/directives/directives.component.css
@@ -1,6 +1,20 @@
-h1 {
-  color: rgb(73, 73, 73);
-}
 h2 {
-  color: rgb(53, 153, 153);
+  font-size: 28px;
+  color: rgb(0, 0, 0);
+}
+
+.container-directives {
+  border-radius: 15px;
+  text-align: center;
+  margin: auto;
+  width: 40%;
+  padding: 20px;
+  margin-top: 20px;
+  background-color: rgb(138, 172, 45);
+}
+
+.div-2,
+a {
+  font-size: 22px;
+  padding: 5px;
 }
