--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -1,15 +1,18 @@
-<h1>Ng-if</h1>
-<div>
-    <h1 *ngIf="option; else elseblock">
-        Displaying only if option is true
-    </h1>
-    <ng-template #elseblock>
-        <h1>
-            Displaying only if option is False
-        </h1>
-    </ng-template>
+<div class="container-directives">
+
+    <h2>Ng-if</h2>
+    <div>
+        <a *ngIf="option; else elseblock">
+            Displaying only if option is true
+        </a>
+        <ng-template #elseblock>
+            <a>
+                Displaying only if option is False
+            </a>
+        </ng-template>
+    </div>
+    <h2>Ng-for</h2>
+    <div *ngFor="let car of cars; index as i" class="div-2">
+        Car at {{i+1}} number is of type {{car}}
+    </div>
 </div>
-<h1>Ng-for</h1>
-<div *ngFor="let car of cars; index as i">
-    <h2>Car at {{i+1}} number is of type {{car}}</h2>
-</div>`
