--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,9 @@
         <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
             true}">Home</a></li>
         <li><a routerLink="/users" routerLinkActive="active">Users</a></li>
+        <li><a routerLink="/cars" routerLinkActive="active">Cars</a></li>
+        <li><a routerLink="/directives" routerLinkActive="active">Directives</a></li>
+        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
         <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
     </ul>
 </nav>
