--- a/src/app/directives/directives.component.css
+++ b/src/app/directives/directives.component.css
@@ -1,4 +1,6 @@
 h2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: 28px;
   color: rgb(0, 0, 0);
 }
@@ -7,7 +9,7 @@ h2 {
   border-radius: 15px;
   text-align: center;
   margin: auto;
-  width: 40%;
+  width: 45%;
   padding: 20px;
   margin-top: 20px;
   background-color: rgb(138, 172, 45);
