--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,9 +1,9 @@
 div {
   border-radius: 15px;
   font-size: 26px;
-  text-align: left;
+  text-align: center;
   margin: auto;
-  width: max-content;
+  width: 45%;
   padding: 20px;
   margin-top: 20px;
   background-color: rgb(187, 116, 36);
@@ -19,5 +19,6 @@ th {
 }
 table {
   width: 100%;
+  text-align: left;
   border-spacing: 10px 0;
 }
