--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,3 +1,30 @@
+<!-- <div class="container1">
+    <table>
+        <tr class="table-row-heading">
+            <th>Name</th>
+            <th>Model</th>
+            <th>Type</th>
+            <th>Color</th>
+            <th>Active</th>
+            <th>Number</th>
+            <th>Price</th>
+        </tr>
+        <tr class="table-row" *ngFor="let car of cars">
+            <td>
+                {{car.name}}
+            </td>
+            <td>
+                {{car.model}}
+            </td>
+            <td>
+                {{car.type}}
+            </td>
+            <td>
+                {{car.color}}
+            </td>
+        </tr>
+    </table>
+</div> -->
 <div>
     This is Cars Page!
 </div>
