--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,7 @@
 <div class="container1">
+    <div class="container-2">
+        All Users Available
+    </div>
     <table>
         <tr class="table-row-heading">
             <th>ID</th>
