--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,11 +1,22 @@
-div {
+.main-container {
   border-radius: 15px;
-  font-size: 28px;
-  text-align: center;
+  text-align: left;
   margin: auto;
   width: 45%;
   padding: 20px;
   margin-top: 20px;
   background-color: rgb(38, 135, 199);
   height: 40vh;
+}
+
+.container-2 {
+  font-size: 28px;
+  text-align: center;
+}
+.container-3 {
+  font-size: 22px;
+  margin-top: 30px;
+}
+li {
+  padding: 5px;
 }
