--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,12 @@
-<div>
-    This is Home Page!
-</div>>
+<div class="main-container">
+    <div class="container-2">
+        This is Home Page!
+    </div>
+    <div class="container-3">
+        <li>Navigate to Users to see all users fetched from URL</li>
+        <li>Navigate to Cars to see all cars from database</li>
+        <li>Navigate to Directives to see demo work on ngIF and ngFor</li>
+        <li>Navigate to About for Details</li>
+        <li>Navigate to Contact for Cantact Details</li>
+    </div>
+</div>
