--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,4 +1,4 @@
-div {
+.container1 {
   border-radius: 15px;
   font-size: 26px;
   text-align: center;
@@ -21,4 +21,9 @@ table {
   width: 100%;
   text-align: left;
   border-spacing: 10px 0;
+}
+.container-2 {
+  padding-bottom: 10px;
+  font-size: 28px;
+  text-align: center;
 }
