--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,22 +1,66 @@
 .main-container {
-  border-radius: 15px;
-  text-align: left;
+  border-radius: 40px;
+  align-content: center;
   margin: auto;
   width: 45%;
   padding: 20px;
   margin-top: 20px;
   background-color: rgb(38, 135, 199);
-  height: 40vh;
+  height: max-content;
 }
 
-.container-2 {
+.mini-container {
   font-size: 28px;
   text-align: center;
 }
-.container-3 {
+
+#btn-submit {
+  background-color: rgb(41, 190, 48);
   font-size: 22px;
-  margin-top: 30px;
+  padding: 10px;
+  border: 2px solid rgb(78, 78, 78);
+  border-radius: 20px;
+  width: max-content;
+  margin-top: 25px;
 }
-li {
-  padding: 5px;
+.form-container {
+  border-radius: 20px;
+  padding: 15px;
+  margin: 20px;
+  height: max-content;
+  background-color: #e0e0e0;
+  top: 15%;
+}
+form input,
+select {
+  padding: 10px;
+  font-size: 20px;
+  border: 1px solid darkgray;
+  border-radius: 15px;
+  width: 100%;
+  margin-top: 5px;
+}
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.form-group {
+  max-width: 100%;
+  gap: 7%;
+  margin: 5px 0;
+  display: flex;
+}
+label {
+  font-size: 20px;
+}
+
+.warning {
+  font-size: 16px;
+  color: red;
+}
+.form-group-2 {
+}
+.form-group-2 input {
+  width: 100%;
 }
