--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -38,7 +38,7 @@ select {
   border: 1px solid darkgray;
   border-radius: 15px;
   width: 100%;
-  margin-top: 5px;
+  margin-bottom: 10px;
 }
 form {
   width: 100%;
@@ -59,8 +59,10 @@ label {
   font-size: 16px;
   color: red;
 }
-.form-group-2 {
-}
 .form-group-2 input {
   width: 100%;
+}
+div > label:before {
+  content: "*";
+  color: red;
 }
