--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -8,13 +8,13 @@
                 <label for="firstName">First Name
                     <input type="text" id="firstName" name="firstName" ngModel required #firstName="ngModel">
                     <div class="warning" *ngIf="firstName.touched && firstName.invalid">
-                        First Name is required
+                        *First Name is required
                     </div>
                 </label>
                 <label for="lastName">Last Name
                     <input type="text" id="lastName" name="lastName" ngModel required #lastname="ngModel">
                     <div class="warning" *ngIf="lastname.touched && lastname.invalid">
-                        Last Name is required
+                        *Last Name is required
                     </div>
                 </label>
             </div>
@@ -22,14 +22,14 @@
                 <label for="age">Age
                     <input type="text" maxlength="2" id="age" name="age" ngModel #age="ngModel" required>
                     <div class="warning" *ngIf="age.touched && age.invalid">
-                        Age is required
+                        *Age is required
                     </div>
                 </label>
                 <label for="ph-number">Phone Number
                     <input type="tel" id="number" name="number" ngModel maxlength="10" minlength="10" required
                         #number="ngModel">
                     <div class="warning" *ngIf="number.touched && number.invalid">
-                        Phone Number is required
+                        *Phone Number is required
                     </div>
                 </label>
                 <label for="gender">Gender
@@ -39,21 +39,21 @@
                         <option value="others">Others</option>
                     </select>
                     <div class="warning" *ngIf="gender.touched && gender.invalid">
-                        Gender is required
+                        *Gender is required
                     </div>
                 </label>
             </div>
             <div class="form-group-2">
                 <label for="address">Address
-                    <input type="text" id="address" name="address" ngModel #address="ngModel" required>
+                    <input type="text" id="address" name="address" ngModel required #address="ngModel">
                     <div class="warning" *ngIf="address.touched && address.invalid">
-                        Please enter the Address
+                        *Address is required
                     </div>
                 </label>
                 <label for="email">Email
                     <input type="email" id="email" name="email" ngModel #email="ngModel" required>
                     <div class="warning" *ngIf="email.touched && email.invalid">
-                        Please enter the Email
+                        *Email is required
                     </div>
                 </label>
             </div>
