--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -22,6 +22,7 @@
             <td>
                 {{user.last_name}}
             </td>
+            <!-- <img src={{user.avatar}}> -->
         </tr>
     </table>
 </div>
