--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,62 +3,95 @@
         Please Enter User Details!
     </div>
     <div class="form-container">
-        <!-- <form #userForm="ngForm" (submit)="log(userForm.value)"> -->
-        <form [formGroup]="form">
+        <form [formGroup]="form" (submit)="log(form.value)">
             <div class="form-group">
                 <label for="firstName">First Name
-                    <input type="text" id="firstName" name="firstName" ngModel required #firstName="ngModel">
+                    <input type="text" id="firstName" formControlName="firstName" maxlength="20">
                     <div class="warning" *ngIf="firstName.touched && firstName.invalid">
-                        *First Name is required
+                        <div *ngIf="firstName.errors['required']">
+                            *First Name is required
+                        </div>
+                        <div *ngIf="firstName.errors['pattern']">
+                            *Should be a Character Only
+                        </div>
                     </div>
                 </label>
                 <label for="lastName">Last Name
-                    <input type="text" id="lastName" name="lastName" ngModel required #lastname="ngModel">
-                    <div class="warning" *ngIf="lastname.touched && lastname.invalid">
-                        *Last Name is required
+                    <input type="text" id="lastName" formControlName="lastName" maxlength="20">
+                    <div class="warning" *ngIf="lastName.touched && lastName.invalid">
+                        <div *ngIf="lastName.errors['required']">
+                            *Last Name is required
+                        </div>
+                        <div *ngIf="lastName.errors['pattern']">
+                            *Should be a Character Only
+                        </div>
                     </div>
                 </label>
             </div>
             <div class="form-group">
                 <label for="age">Age
-                    <input type="text" maxlength="2" id="age" name="age" ngModel #age="ngModel" required>
+                    <input type="text" maxlength="2" id="age" formControlName="age">
                     <div class="warning" *ngIf="age.touched && age.invalid">
-                        *Age is required
+                        <div *ngIf="age.errors['required']">
+                            *Age is required
+                        </div>
+                        <div *ngIf="age.errors['pattern']">
+                            *should be a number
+                        </div>
                     </div>
                 </label>
-                <label for="number">Phone Number
-                    <input type="tel" id="number" name="number" ngModel maxlength="10" minlength="10" required
-                        #number="ngModel">
-                    <div class="warning" *ngIf="number.touched && number.invalid">
-                        *Phone Number is required
+                <label for="phone">Phone Number
+                    <input type="tel" id="phone" formControlName="phone" maxlength="10">
+                    <div class="warning" *ngIf="phone.touched && phone.invalid">
+                        <div *ngIf="phone.errors['required']">
+                            *Contact is required
+                        </div>
+                        <div *ngIf="phone.errors['minlength']">
+                            *should be of 10 digit
+                        </div>
+                        <div *ngIf="phone.errors['pattern']">
+                            *should be a number
+                        </div>
                     </div>
                 </label>
                 <label for="gender">Gender
-                    <select id="gender" name="gender" ngModel required #gender="ngModel">
+                    <select id="gender" formControlName="gender">
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                         <option value="others">Others</option>
                     </select>
                     <div class="warning" *ngIf="gender.touched && gender.invalid">
-                        *Gender is required
+                        <div *ngIf="gender.errors['required']">
+                            *Gender is required
+                        </div>
                     </div>
                 </label>
             </div>
             <div class="form-group-2">
                 <label for="address">Address
-                    <input type="text" id="address" name="address" ngModel required #address="ngModel">
+                    <input type="text" id="address" formControlName="address">
                     <div class="warning" *ngIf="address.touched && address.invalid">
-                        *Address is required
+                        <div *ngIf="address.errors['required']">
+                            *Address is required
+                        </div>
+                        <div *ngIf="address.errors['pattern']">
+                            *Address Invalid
+                        </div>
                     </div>
                 </label>
                 <label for="email">Email
-                    <input type="email" id="email" name="email" ngModel #email="ngModel" required>
+                    <input type="email" id="email" formControlName="email">
                     <div class="warning" *ngIf="email.touched && email.invalid">
-                        *Email is required
+                        <div *ngIf="email.errors['required']">
+                            *Email is required
+                        </div>
+                        <div *ngIf="email.errors['pattern']">
+                            *Invalid type ex "john20@gmail.com"
+                        </div>
                     </div>
                 </label>
             </div>
-            <button type="submit" id="btn-submit">Submit</button>
+            <button type="submit" id="btn-submit" [disabled]="!form.valid">Submit</button>
         </form>
     </div>
 </div>
