lazy loading implemented

--- a/src/app/components/cars/cars.component.html
+++ b/src/app/components/cars/cars.component.html
@@ -1,4 +1,7 @@
-<!-- <div class="container1">
+<div class="container1">
+    <div class="container-2">
+        List of All Cars Available
+    </div>
     <table>
         <tr class="table-row-heading">
             <th>Name</th>
@@ -22,9 +25,15 @@
             <td>
                 {{car.color}}
             </td>
+            <td>
+                {{car.active}}
+            </td>
+            <td>
+                {{car.number}}
+            </td>
+            <td>
+                $ {{car.price}}
+            </td>
         </tr>
     </table>
-</div> -->
-<div>
-    This is Cars Page!
 </div>
