--- a/src/app/components/cars/cars.component.css
+++ b/src/app/components/cars/cars.component.css
@@ -1,11 +1,32 @@
-div {
+.container1 {
   border-radius: 40px;
-  font-size: 28px;
+  font-size: 22px;
   text-align: center;
   margin: auto;
-  width: 45%;
+  width: max-content;
   padding: 20px;
   margin-top: 20px;
-  background-color: rgb(187, 49, 153);
-  height: 40vh;
+  background-color: rgb(150, 150, 150);
+  box-shadow: 15px 15px 15px rgb(80, 80, 80);
+}
+
+.table-row {
+  font-size: 18px;
+}
+
+td,
+th {
+  padding: 5px;
+  padding-left: 25px;
+}
+
+table {
+  width: 100%;
+  text-align: left;
+  border-spacing: 10px 0;
+}
+.container-2 {
+  padding-bottom: 10px;
+  font-size: 28px;
+  text-align: center;
 }
