--- a/src/app/components/pages/directives/directives.component.html
+++ b/src/app/components/pages/directives/directives.component.html
@@ -14,4 +14,5 @@
     <div *ngFor="let car of cars; index as i" class="div-2">
         Car at {{i+1}} number is of type {{car}}
     </div>
+    <div>{{date }}</div>
 </div>
