--- a/src/app/components/pages/user-form/user-form.component.css
+++ b/src/app/components/pages/user-form/user-form.component.css
@@ -70,7 +70,7 @@ label {
 }
 div > label:before {
   content: "*";
-  font-size: larger;
+  font-size: large;
   color: red;
 }
 #lastname-label:before {
