--- a/src/app/components/pages/user-form/user-form.component.css
+++ b/src/app/components/pages/user-form/user-form.component.css
@@ -39,10 +39,9 @@ form input,
 select {
   padding: 10px;
   font-size: 20px;
-  border: 1px solid darkgray;
-  border-bottom: 3px solid darkgray;
-  border-right: 3px solid darkgray;
+  border: 1.5px solid darkgray;
   border-radius: 15px;
+  box-shadow: 3px 3px 5px rgb(150, 150, 150);
   width: 100%;
   margin-bottom: 10px;
 }
