--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,9 +5,11 @@
         <li><a routerLink="/form/view" routerLinkActive="active">Users-Form</a></li>
         <li><a routerLink="/users/show" routerLinkActive="active">Users</a></li>
         <li><a routerLink="/cars/show" routerLinkActive="active">Cars</a></li>
-        <li><a routerLink="/users/api" routerLinkActive="active">User-API</a></li>
+        <li><a routerLink="/user/api" routerLinkActive="active">User-API</a></li>
         <li><a routerLink="/directives" routerLinkActive="active">Directives</a></li>
-        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+        <li><a routerLink="/date-pipes" routerLinkActive="active">Date-Pipes</a></li>
+        <!--  
         <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+ -->
     </ul>
 </nav>
