--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
         <li><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
             true}">Home</a></li>
         <li><a routerLink="/form/view" routerLinkActive="active">Users-Form</a></li>
-        <li><a routerLink="/users/show" routerLinkActive="active">Users</a></li>
-        <li><a routerLink="/cars/show" routerLinkActive="active">Cars</a></li>
+        <li><a routerLink="/users/show" routerLinkActive="active">Users-DB</a></li>
+        <li><a routerLink="/cars/show" routerLinkActive="active">Cars-DB</a></li>
         <li><a routerLink="/user/api" routerLinkActive="active">User-API</a></li>
         <li><a routerLink="/directives" routerLinkActive="active">Directives</a></li>
         <li><a routerLink="/date-pipes" routerLinkActive="active">Date-Pipes</a></li>
