--- a/src/app/components/pages/date-pipes/date-pipes.component.html
+++ b/src/app/components/pages/date-pipes/date-pipes.component.html
@@ -1,17 +1,23 @@
 <div class="container1">
     <div class="div-3">
-        <li>Short Day: <a>{{date | date:'EEE' }}</a></li>
+        <li>Date comes from System: <a>{{date}}</a></li>
         <li>Day: <a>{{date | date:'EEEE' }}</a></li>
-        <li>Short Month: <a>{{date | date:'MMM' }}</a></li>
         <li>Month: <a>{{date | date:'MMMM' }}</a></li>
-        <li>Full Day: <a>{{date | date:'full' }}</a></li>
         <li>Short Full Date: <a>{{date | date:'short' }}</a></li>
         <li>Short Date Only: <a>{{date | date:'shortDate' }}</a></li>
         <li>Short Time Only: <a>{{date | date:'shortTime' }}</a></li>
+        <li>Medium Full Date: <a>{{date | date:'medium' }}</a></li>
+        <li>Medium Date Only: <a>{{date | date:'mediumDate' }}</a></li>
         <li>Medium Time Only: <a>{{date | date:'mediumTime' }}</a></li>
         <li>Long Full Date: <a>{{date | date:'long' }}</a></li>
         <li>Long Date Only: <a>{{date | date:'longDate' }}</a></li>
         <li>Long Time Only: <a>{{date | date:'longTime' }}</a></li>
+        <li>Full Day: <a>{{date | date:'full' }}</a></li>
+        <li>Full Date Only: <a>{{date | date:'fullDate' }}</a></li>
         <li>Full Time Only: <a>{{date | date:'fullTime' }}</a></li>
+        <li>Custom Date "Date/Month/Year": <a>{{date | date:'dd/mm/yyyy' }}</a></li>
+        <li>Custom Date "Year/Month/Date": <a>{{date | date:'yyyy/mm/dd' }}</a></li>
+        <li>Custom Date "Month/Date/Year": <a>{{date | date:'mm/dd/yyyy' }}</a></li>
+
     </div>
 </div>
