--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -7,5 +7,7 @@
         <li>Users Available from Database</li>
         <li>Cars Available from Database</li>
         <li>User fetched from API</li>
+        <li>Example of Directives</li>
+        <li>List of All Date-Pipes with Example</li>
     </ul>
 </div>
